# uni-chat

./: .auto-claude-security.json  .auto-claude-status  .claude_settings.json  .gitattributes  .gitignore  .ripgrepignore  AGENT_FINDINGS_CONSOLIDATED.md  CHANGELOG.md  CLAUDE.md  CLAUDE.original.md  DEPLOY.md  MOBILE_TESTING_GUIDE.md  PROGRESS_REPORT.md  README.md  TESTING_SETUP.md  TODO-SHADCN.md  TODO.md  run-all.bat  run-all.ps1  run-all.sh  todo.md
backend/: .env.example  create_tests.py  gunicorn.conf.py  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  run.py  run_seed.bat  run_seed.ps1  run_tests.bat  seed_templates_simple.py  seed_workflow_templates.py  test_debug.py  wsgi.py
backend/app/: __init__.py  config.py  extensions.py
backend/scripts/: create_tests.py  debug_endpoint.py  migrate_backfill_workspace_ids.py  migrate_collapse_roles.py  migrate_enterprise.py  migrate_knowledge_folder_scope.py  migrate_platform_admin.py  migrate_projects.py  migrate_resource_scoping.py  migrate_workspaces.py  seed.py  seed_demo.py  seed_holding.py  seed_prompt_templates.py  setup_indexes.py
backend/tests/: conftest.py  test_admin_routes.py  test_ai_preferences_routes.py  test_arena_debate_routes.py  test_auth.py  test_auth_additional.py  test_automate_agent_routes.py  test_chat_routes.py  test_configs_routes.py  test_conversations_move.py  test_conversations_routes.py  test_dlp_smart_scan.py  test_folders_routes.py  test_groups_routes.py  test_holding_analytics_service.py  test_image_models_routes.py  test_knowledge_folders_routes.py  test_knowledge_routes.py  test_meetings_audio_upload.py  test_meetings_dlp.py  test_meetings_feature_flag.py  test_meetings_glossary.py  test_meetings_pipeline.py  test_meetings_pipeline_internals.py  test_meetings_routes.py  test_meetings_save_artifact.py  test_meetings_series_match.py  test_meetings_series_routes.py  test_meetings_spawn_conversation.py  test_meetings_summary_mock.py  test_misc_routes.py  test_model_catalog_routes.py  test_model_registry_service.py  test_platform_routes.py  test_projects_routes.py  test_role_migration.py  test_routines.py  test_routines_nl.py  test_telegram_link_routes.py  test_usage_log_attribution.py  (+12 more)
bot/: .env.example  README.md  pyproject.toml
bot/bot/: __init__.py  flask_ctx.py  keyboards.py  main.py  settings.py
bot/tests/: __init__.py  test_format.py  test_ratelimit.py  test_stream.py
docs/: API.md  (+5 more)
scheduler/: .env.example  README.md  pyproject.toml
scheduler/scheduler/: __init__.py  delivery.py  executor.py  flask_ctx.py  jobstore.py  main.py  retry.py  settings.py  sync.py
scheduler/tests/: conftest.py  test_delivery.py  test_executor.py  test_retry.py  test_sync.py
(+626 files in other folders)
