[project]
name = "unichat-backend"
version = "0.1.0"
description = "uni-chat Flask backend (importable as `app`)"
requires-python = ">=3.12"
dependencies = [
  "Flask==3.1.3",
  "Flask-Cors==6.0.2",
  "Flask-PyMongo==3.0.1",
  "pymongo==4.17.0",
  "Flask-JWT-Extended==4.7.1",
  "bcrypt==5.0.0",
  "PyJWT[crypto]==2.12.1",
  "cryptography>=48.0.0",
  "requests==2.33.1",
  "httpx==0.28.1",
  "marshmallow==4.3.0",
  "email-validator==2.3.0",
  "Pillow==12.2.0",
  "Flask-Limiter==4.1.1",
  "python-dotenv==1.2.2",
  "python-dateutil==2.9.0.post0",
  "gunicorn==25.3.0",
  "flask-swagger-ui==5.32.4",
  "PyYAML==6.0.3",
  "croniter==6.2.2",
  "tzdata==2026.2",
  "filetype",
  "elevenlabs>=2.44.0",
  "rapidfuzz>=3.0",
  "jsonschema>=4.0",
]

[dependency-groups]
dev = [
  "pytest==7.4.3",
  "pytest-cov==4.1.0",
  "pytest-mock==3.12.0",
  "pytest-flask==1.3.0",
  "flask-testing==0.8.1",
  "faker==22.0.0",
  "factory-boy==3.3.0",
  "freezegun==1.4.0",
  "mongomock==4.1.2",
  "pytest-mongodb==2.4.0",
  "responses==0.24.1",
  "requests-mock==1.11.0",
  "pytest-randomly==3.15.0",
  "pytest-xdist==3.5.0",
  "coverage[toml]==7.4.0",
  "setuptools<81",
]

[tool.setuptools]
packages = ["app"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
