[project]
name = "unichat-scheduler"
version = "0.1.0"
description = "uni-chat APScheduler service for scheduled Routines"
requires-python = ">=3.12"
dependencies = [
  "apscheduler>=3.10,<4",
  "croniter>=2.0",
  "pymongo>=4.6",
  "aiogram>=3.27,<4",
  "aiohttp>=3.9",
  "pydantic-settings>=2.2",
  "markdown-it-py>=3.0",
  "python-dotenv>=1.0",
  "tzdata>=2024.1",
  "unichat-backend",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "mongomock>=4.1",
  "setuptools<81",
]

[tool.setuptools]
packages = ["scheduler"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
